# microbot

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: clippy.yml  fmt.yml  license-check.yml  machete.yml  test.yml
microbot/: Cargo.toml
microbot/src/: command.rs  context.rs  lib.rs  message.rs
src/: command.rs  context.rs  lib.rs  message.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: Cargo.toml  bot_conversation.rs  ignore_old_messages.rs  receives_command.rs
tests/tests/: bot_conversation.rs  ignore_old_messages.rs  receives_command.rs
