[workspace]
members = [
  "microbot",
  "test-utils",
  "tests"
]
resolver = "2"

[workspace.dependencies]
futures = "0.3.31"
http = "1.2.0"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "cbb92cacce1d16673a949204e4f88b78e9917026", default-features = false, features = ["rustls-tls"] }
regex = "1.11.1"
ruma = { version = "0.10.1", features = ["events"] }
ruma-common = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
tokio = "1.42.0"
tracing = "0.1.41"
