[workspace]
members = [
  "microbot",
  "test-utils",
  "tests"
]
resolver = "2"

[workspace.dependencies]
futures = "0.3.32"
http = "1.4.0"
matrix-sdk = { version = "0.16.0", default-features = false, features = ["rustls-tls"] }
regex = "1.12.2"
ruma = { version = "0.14", features = ["events"] }
ruma-common = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.44"
