[workspace]
members = [
  "microbot",
  "test-utils",
  "tests"
]
resolver = "2"

[workspace.dependencies]
futures = "0.3.32"
http = "1.4.0"
matrix-sdk = { version = "0.17.0", default-features = false }
regex = "1.12.3"
ruma = { version = "0.15", features = ["events"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
