[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { workspace = true }
microbot = { path = "../microbot" }
microbot-test-utils = { path = "../test-utils" }
ruma = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = "0.10.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
